[package]
name = "wasm-bindings"
version = "0.1.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["contracts/hasher"]

[[bench]]
harness = false
name = "hasher"

[dev-dependencies]
criterion = "0.3"

[dependencies]
# why is this only in lib in wasmer, not own repo/crate?
wasmer-middleware-common = { git = "https://github.com/wasmerio/wasmer", tag = "0.6.0" }
wasmer-runtime = { git = "https://github.com/wasmerio/wasmer", tag = "0.6.0" }
wasmer-runtime-core = { git = "https://github.com/wasmerio/wasmer", tag = "0.6.0" }
wasmer-singlepass-backend = { git = "https://github.com/wasmerio/wasmer", tag = "0.6.0" }
wasmer-clif-backend = { git = "https://github.com/wasmerio/wasmer", tag = "0.6.0" }

# feature only deps
wasmer-llvm-backend = { git = "https://github.com/wasmerio/wasmer", tag = "0.6.0", optional = true }

[features]
llvm = ["wasmer-llvm-backend"]
