[package]
name = "hasher"
version = "0.1.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"

[lib]
# we need cdylib to build *.wasm file, rlib for benchmarking
crate-type = ["cdylib", "rlib"]

[[bench]]
harness = false
name = "example"

[dev-dependencies]
criterion = "0.3"

[dependencies]
sha2 = "0.8"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
# opt-level 3 reduces gas cost considerably
opt-level = 3
# debug flag add ~30% to size, no gas cost
debug = false
rpath = false
# lto doesn't seem to have an effect anymore?
lto = true
debug-assertions = false
# 1 instead of 16 makes slightly lower gas (1%?)
codegen-units = 1
panic = 'unwind'
incremental = false
# overflow-checks = false also reduces gas cost a bit (1%?)
overflow-checks = true
